@@ -1,3 +1,9 @@
+2020-08-25  Michael Albinus  <michael.albinus@gmx.de>
+
+	* tramp-sh.el (tramp-sh-get-signal-strings): Add sanity check.
+
+	* tramp-smb.el (tramp-smb-options): Change :version.
+
 2020-08-01  Michael Albinus  <michael.albinus@gmx.de>
 
 	* tramp.el (tramp-get-signal-strings): Remove function.
